<resources>
    <string name="app_name">Pop Movie App</string>
    <string name="title_main_activity">Popular Movies</string>
    <string name="title_detail_activity">Movie Details</string>
    <!-- TODO 6: Build Strings -->
    <!-- Main Activity -->
    <string name="settings">Settings</string>
    <string name="sort">Sort by:</string>
    <string name="image_url">http://image.tmdb.org/t/p/%1$s</string>
    <string name="image_url500">http://image.tmdb.org/t/p/w500%1$s</string>
    <string name="image_url300">http://image.tmdb.org/t/p/w300%1$s</string>
    <!-- Detail Activity-->
    <string name="original_title_label">Original title:</string>
    <string name="plot_synopsis_label">Plot synopsis:</string>
    <string name="user_rating_label">User rating:</string>
    <string name="release_date_label">Release date:</string>
    <string name="movie_poster_label">Movie poster</string>
    <!-- Error messages-->
    <string name="error_message">Error loading movie data, please try again.</string>
    <!-- Test names -->
    <string name="summary">Summary</string>
    <string name="plot_synopsis">This movies is about a thing and a place in a time when it happened. Whoa bro. Whoa.</string>
    <string name="movie_length">999min</string>
    <string name="user_rating">Vote: %2$s</string>
    <string name="release_date">Released %1$s</string>
    <string name="mark_as_fav">Mark as Favorite</string>
    <string name="fav_list">List of Favorites</string>

    <!-- url parsing -->
    <string name="add_favorite">Added to Favorites!</string>
    <string name="remove_favorite">Removed from Favorites.</string>
    <string name="most_pop">Most \n Popular</string>
    <string name="top_rated">Top \n Rated</string>
    <string name="base_url">http://api.themoviedb.org/3/</string>
    <string name="http_popular">/movie/popular</string>
    <string name="http_top_rated">/movie/top_rated</string>

    <!-- TODO !!! REMOVE THESE BEFORE SUBMITTING FOR REVIEW !!! -->
    <string name="read_access_token_v4_auth">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJhOWY3ZTcwYmE3NTliMTk5ODE3ZGFlOTNkOTY0NWIyMSIsInN1YiI6IjViMDQ2M2Y5MGUwYTI2MjNjNTAyYzVkZiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.XRttXoNRbMrVg61WG9UsmiG8ygj-fNkM6flMRpoiD7A</string>
    <string name="api_key_v3_auth">a9f7e70ba759b199817dae93d9645b21</string>
</resources>
